--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,11 +3,13 @@
   https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
+ @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 body {
-	font-family: Verdana, sans-serif;
+	font-family: 'Poppins', sans-serif;
+	font-weight: 300;
 	margin: auto;
 	padding: 20px;
-	max-width: 65ch;
+	max-width: 55ch;
 	text-align: left;
 	background-color: #fff;
 	word-wrap: break-word;
@@ -26,7 +28,7 @@ b {
 	color: #222;
 }
 a {
-	color: #3273dc;
+	color: #5325f8;
 }
 nav a {
 	margin-right: 10px;
