first ready blog

--- a/src/pages/blogList.astro
+++ b/src/pages/blogList.astro
@@ -2,12 +2,14 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import PostCard from '../components/PostCard.astro'
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 
 // Use Astro.glob() to fetch all posts, and then sort them by date.
 const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 	(a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf()
 );
+
 ---
 
 <!DOCTYPE html>
@@ -39,7 +41,7 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 				<ul>
 					{posts.map((post) => (
 						<li>
-							<time datetime={post.frontmatter.pubDate}>
+							<!--  <time datetime={post.frontmatter.pubDate}>
 								{new Date(post.frontmatter.pubDate).toLocaleDateString('en-us', {
 									year: 'numeric',
 									month: 'short',
@@ -47,6 +49,10 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 								})}
 							</time>
 							<a href={post.url}>{post.frontmatter.title}</a>
+							-->
+
+							<PostCard title={post.frontmatter.title} pubDate={post.frontmatter.pubDate} url={post.url}/>
+
 						</li>
 					))}
 				</ul>
