--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,15 +11,14 @@ import { SITE_TITLE } from '../config';
 		<HeaderLink href="/">Home</HeaderLink>
 		<HeaderLink href="/blogList">Blog</HeaderLink>
 		<HeaderLink href="/about">About</HeaderLink>
-		<HeaderLink href="https://twitter.com/astrodotbuild" target="_blank">Twitter</HeaderLink>
-		<HeaderLink href="https://github.com/withastro/astro" target="_blank">GitHub</HeaderLink>
+		<HeaderLink href="https://github.com/vignesh-seven" target="_blank">GitHub</HeaderLink>
 	</nav>
 </header>
 <style>
 	header {
-		margin: 0em 0 2em;
+		margin: 0em 0 1.5em;
 	}
 	h2 {
-		margin: 0.5em 0;
+		margin: 0.5em 0 1em;
 	}
 </style>
