--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -10,11 +10,18 @@ const isActive = href === Astro.url.pathname.replace(/\/$/, '');
 </a>
 <style>
 	a {
+		/* border: 1px solid rgb(234, 234, 234); */
+		/* border-radius: 10px; */
+		padding: 10px;
 		display: inline-block;
 		text-decoration: none;
 	}
 	a.active {
 		font-weight: bolder;
 		text-decoration: underline;
+	}
+	a:hover {
+		background-color: rgb(234, 234, 234);
+		transition: all 0.4s ease;
 	}
 </style>
