--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -18,6 +18,9 @@ const {title, pubDate, url} = Astro.props;
 
 <style>
   main {
-    background-color: coral;
+    
+  }
+  time {
+    opacity: 0.7;
   }
 </style>
