--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,9 +13,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>Hlooo!</h1>
+			<h1>Welcome!</h1>
 			<p>
-				Welcome to my personal blog where I post about all my Computer Science progress and other stuff I'm interested in. This blog is still in development so there's nothing much to look at for now. But it will be filled with all kinds of stuff slowly.
+				This is my personal blog where I post about all my progress and other stuff I'm interested in. This blog is still in development so there's nothing much to look at for now. But it will be filled with all kinds of stuff slowly.
 			</p>
 			<p>
 				I will post about my progress, hobbies, anything I come across that seems interesting to me.
