config for github pages

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,9 +8,9 @@ import { SITE_TITLE } from '../config';
 		{SITE_TITLE}
 	</h2>
 	<nav>
-		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/blogList">Blog</HeaderLink>
-		<HeaderLink href="/about">About</HeaderLink>
+		<HeaderLink href="/my-blog">Home</HeaderLink>
+		<HeaderLink href="/my-blog/blogList">Blog</HeaderLink>
+		<HeaderLink href="/my-blog/about">About</HeaderLink>
 		<HeaderLink href="https://github.com/vignesh-seven" target="_blank">GitHub</HeaderLink>
 	</nav>
 </header>
