--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import { SITE_TITLE } from '../config';
 		{SITE_TITLE}
 	</h2>
 	<nav>
-		<HeaderLink href="/my-blog">Home</HeaderLink>
+		<HeaderLink href="/my-blog/">Home</HeaderLink>
 		<HeaderLink href="/my-blog/blogList">Blog</HeaderLink>
 		<HeaderLink href="/my-blog/about">About</HeaderLink>
 		<HeaderLink href="https://github.com/vignesh-seven" target="_blank">GitHub</HeaderLink>
