matched colors across pages

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,7 @@ import { SITE_TITLE } from '../config';
 		<HeaderLink href="/my-blog/blogList">Blog</HeaderLink>
 		<HeaderLink href="/my-blog/about">About</HeaderLink>
 		<HeaderLink href="https://github.com/vignesh-seven" target="_blank">GitHub</HeaderLink>
+		<hr>
 	</nav>
 </header>
 <style>
@@ -20,5 +21,8 @@ import { SITE_TITLE } from '../config';
 	}
 	h2 {
 		margin: 0.5em 0 1em;
+	}
+	hr {
+		color: #eaeaea;
 	}
 </style>
