--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -11,7 +11,7 @@ const isActive = href === Astro.url.pathname.replace(/\/$/, '');
 <style>
 	a {
 		/* border: 1px solid rgb(234, 234, 234); */
-		/* border-radius: 10px; */
+		border-radius: 0.8em;
 		padding: 10px;
 		display: inline-block;
 		text-decoration: none;
@@ -21,7 +21,7 @@ const isActive = href === Astro.url.pathname.replace(/\/$/, '');
 		text-decoration: underline;
 	}
 	a:hover {
-		background-color: rgb(234, 234, 234);
+		background-color: #eaeaea;
 		transition: all 0.4s ease;
 	}
 </style>
