--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -6,7 +6,7 @@ const {title, pubDate, url} = Astro.props;
 <main>
 
 <a href={url}>
-  <span class="title">{title}</span>
+<span class="title">{title}</span>
 
 <div style="display:flex" class="sub-text">
 <span>posted on&nbsp;</span>
@@ -30,7 +30,7 @@ const {title, pubDate, url} = Astro.props;
     padding-left: 25px;
     /* border: 3px solid rgb(157, 157, 157); */
     border-radius: 0.8rem;
-    background-color: rgb(221, 221, 221);
+    background-color: #eaeaea;
   }
   a {
     text-decoration: none;
