--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -10,18 +10,18 @@ const isActive = href === Astro.url.pathname.replace(/\/$/, '');
 </a>
 <style>
 	a {
-		/* border: 1px solid rgb(234, 234, 234); */
-		border-radius: 0.8em;
-		padding: 10px;
+		padding: 10px 15px;
 		display: inline-block;
 		text-decoration: none;
+		color: var(--backgroundColor);
 	}
 	a.active {
 		font-weight: bolder;
 		text-decoration: underline;
 	}
 	a:hover {
-		background-color: #eaeaea;
+		background-color: var(--accentColor);
+		/* color: black; */
 		transition: all 0.4s ease;
 	}
 </style>
