--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -1,47 +1,60 @@
 ---
-const {title, pubDate, url} = Astro.props;
+const { title, pubDate, url } = Astro.props;
 ---
 
-
 <main>
+  <a href={url}>
+    <div class="container">
+      <span class="title">{title}</span>
+      <span style="display:flex" class="sub-text">
+        <span>posted on&nbsp;</span>
+        <span
+          ><!-- //datetime={pubDate}> -->
 
-<a href={url}>
-<span class="title">{title}</span>
-
-<div style="display:flex" class="sub-text">
-<span>posted on&nbsp;</span>
-<span><!-- //datetime={pubDate}> -->
-  {new Date(pubDate).toLocaleDateString('en-us', {
-    year: 'numeric',
-    month: 'short',
-    day: 'numeric',
-  }) } 
-</span>
-</div>
-</a>
+          {
+            new Date(pubDate).toLocaleDateString("en-us", {
+              year: "numeric",
+              month: "short",
+              day: "numeric",
+            })
+          }
+        </span>
+      </span>
+    </div>
+  </a>
 </main>
 
 <style>
+  @import "../styles/global-style-variables.css";
+
   main {
     min-width: max-content;
-    width: 100%;
     margin: 3px;
-    padding: 15px;
-    padding-left: 25px;
-    /* border: 3px solid rgb(157, 157, 157); */
+    width: 100%;
     border-radius: 0.8rem;
-    background-color: #eaeaea;
+    background-color: var(--backgroundColorDark);
+    transition: all 0.4s ease;
+  }
+  .container {
+    padding: 10px;
+    padding-left: 25px;
+    
+  }
+  main:hover {
+    background-color: var(--accentColor);
   }
   a {
     text-decoration: none;
-    color: #5325f8; 
+    font-size: 1em;
+    color: var(--backgroundColor);
   }
   .title {
-    font-size: 1.2em;
+    font-size: 1em;
   }
   .sub-text {
-    opacity: 0.7;
+    font-size: 0.9em;
+    opacity: 0.5;
     text-decoration: none;
-    color: black;
+    color: var(--textColorLight);
   }
 </style>
