--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -23,6 +23,8 @@ const {
 		<BaseHead title={title} description={description} />
 		
 		<style>
+			@import "../styles/global-style-variables.css";
+			
 			.title {
 				font-size: 2em;
 				margin: 0.25em 0 0;
