changed some names

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,9 +9,9 @@ import { SITE_TITLE } from '../config';
 	</h2>
 	<!-- <div class="navbar"> -->
 	<nav>
-		<HeaderLink href="/my-blog/">Home</HeaderLink>
-		<HeaderLink href="/my-blog/blogList">Blog</HeaderLink>
-		<HeaderLink href="/my-blog/about">About</HeaderLink>
+		<HeaderLink href="/">Home</HeaderLink>
+		<HeaderLink href="/blogList">Blog</HeaderLink>
+		<HeaderLink href="/about">About</HeaderLink>
 		<HeaderLink href="https://github.com/vignesh-seven" target="_blank">GitHub</HeaderLink>
 		<!-- <hr> -->
 	</nav>
