--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -33,6 +33,7 @@ const { title, pubDate, url } = Astro.props;
     border-radius: 0.8rem;
     background-color: var(--backgroundColorDark);
     transition: all 0.4s ease;
+    color: var(--backgroundColor); 
   }
   .container {
     padding: 10px;
