added more articles

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -53,7 +53,7 @@ const { title, pubDate, url } = Astro.props;
   }
   .sub-text {
     font-size: 0.9em;
-    opacity: 0.5;
+    /* opacity: 0.5; */
     text-decoration: none;
     color: var(--textColorLight);
   }
