--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import { SITE_TITLE } from '../config';
 	<!-- <div class="navbar"> -->
 	<nav>
 		<HeaderLink href="/">Home</HeaderLink>
-		<HeaderLink href="/blogList">Blog</HeaderLink>
+		<HeaderLink href="/blogList">Blog Posts</HeaderLink>
 		<HeaderLink href="/about">About</HeaderLink>
 		<HeaderLink href="https://github.com/vignesh-seven" target="_blank">GitHub</HeaderLink>
 		<!-- <hr> -->
